:sparkles: arithmetic expressions are working (99%)